8181087: Module system implementation refresh (6/2017)
Co-authored-by: Alex Buckley <alex.buckley@oracle.com>
Reviewed-by: plevart, mchung